--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,6 @@
   --accent-color: #3dcf8e;
   --hover-color: #34b079;
   --secondary-title-color: #32325d;
-
-  /* --timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 body {
@@ -76,8 +74,7 @@ h5 {
 .logo-link {
   display: flex;
   align-items: center;
-  width: inherit;
-  height: 100%;
+  width: 65px;
   font-weight: 900;
   font-size: 12px;
   line-height: 1.17;
@@ -221,12 +218,13 @@ h5 {
 
 .team-list {
   margin-top: 30px;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 .team-item {
   border: 1px solid #c0c7d9;
   box-shadow: 0px 5px 20px rgba(77, 77, 158, 0.21);
+  padding: 14px;
 }
 
 .team-item:not(:last-child) {
@@ -236,7 +234,7 @@ h5 {
 .team-photo {
   display: block;
   width: 110px;
-  margin: 20px auto 5px;
+  margin: 5px auto;
 }
 
 .team-name {
@@ -248,6 +246,7 @@ h5 {
 }
 
 .team-position {
+  font-weight: 400;
   font-size: 18px;
   line-height: 1.89;
   color: var(--primary-text-color);
@@ -263,7 +262,7 @@ h5 {
   margin: 0px auto 15px;
   border: none;
   font-weight: 700;
-  line-height: 1.57;
+  line-height: 1.56;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: var(--primary-white-color);
@@ -277,7 +276,6 @@ h5 {
 
 .team-text {
   position: relative;
-  padding: 0px 15px 15px;
 }
 
 .limited {
@@ -291,7 +289,6 @@ h5 {
   position: absolute;
   right: 0px;
   bottom: 0px;
-  margin: 0px 14px 14px 0px;
   padding: 0px;
   border: 0px;
   color: var(--accent-color);
@@ -428,6 +425,9 @@ h5 {
     padding: 0px;
     margin-bottom: 90px;
   }
+  .logo-link {
+    width: 109px;
+  }
   .logo-icon {
     width: 40px;
     height: 40px;
@@ -490,18 +490,19 @@ h5 {
 
   .team-item {
     display: flex;
+    padding: 22px 24px 22px 19px;
+  }
+
+  .team-item:not(:last-child) {
+    margin-bottom: 30px;
   }
 
   .team-text {
-    padding: 23px 24px 23px 30px;
-  }
-
-  .main-team-item {
-    padding: 30px 0px 27px 20px;
+    padding-left: 30px;
   }
 
   .team-photo {
-    margin: 0px auto 20px;
+    margin: 7px auto 20px;
   }
 
   .team-position {
@@ -517,11 +518,6 @@ h5 {
 
   .limited {
     -webkit-line-clamp: 11;
-  }
-
-  .btn-show-more {
-    margin: 0px;
-    margin: 0px 23px 25px 0px;
   }
 
   .tablet-styles {
@@ -545,6 +541,9 @@ h5 {
   }
 
   .list-title {
+    font-size: 22px;
+    line-height: 1.59;
+    letter-spacing: 0.1px;
     padding: 0px;
     margin-bottom: 3px;
     border: none;
@@ -564,6 +563,7 @@ h5 {
 
   .sublist {
     border: none;
+    padding: 0px;
   }
 
   .contact-terms {
@@ -583,20 +583,231 @@ h5 {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .subcontent {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .container,
   .footer-container {
     width: 1200px;
   }
+
   /* header  */
   .page-header {
     padding: 15px 0px 130px;
   }
+
   .nav {
     margin-bottom: 75px;
   }
+
   /* main  */
+  .desktop {
+    display: flex;
+  }
+
   .about-us {
     padding-bottom: 60px;
+  }
+
+  .section:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .desktop-section {
+    width: 700px;
+  }
+
+  .team-list {
+    margin-top: 40px;
+  }
+
+  .team-item {
+    padding: 19px 24px 25px 19px;
+  }
+
+  .team-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .team-photo {
+    margin: 0px auto 15px;
+  }
+
+  .team-position {
+    margin-top: -7px;
+    margin-bottom: 15px;
+  }
+
+  .team-button {
+    padding: 10px 21px;
+    min-width: 220px;
+  }
+
+  .limited {
+    -webkit-line-clamp: 10;
+  }
+
+  .subcontent {
+    padding-top: 14px;
+    margin-left: 75px;
+  }
+
+  .countries-title {
+    font-size: 22px;
+    line-height: 1.36;
+    letter-spacing: 0.1px;
+    text-align: center;
+    color: var(--secondary-title-color);
+    margin-bottom: 14px;
+  }
+
+  .country-item {
+    position: relative;
+    width: 300px;
+    margin-bottom: 20px;
+    background-image: linear-gradient(225deg, #4d4d9e 0%, #32325d 100%);
+    background-color: #32325d;
+  }
+
+  .country-item:focus,
+  .country-item:hover {
+    transition-duration: 400ms;
+    transform: scale(1.05);
+  }
+
+  .country-item:last-child {
+    margin-bottom: 30px;
+  }
+
+  .country-name {
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    font-size: 22px;
+    line-height: 1.36;
+    letter-spacing: 0.1px;
+    color: var(--primary-white-color);
+  }
+
+  .country-name:hover,
+  .country-name:focus {
+    color: var(--hover-color);
+  }
+
+  .country-photo {
+    opacity: 0.55;
+  }
+
+  .anchors {
+    margin-top: 30px;
+    position: relative;
+  }
+
+  .table-button {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 5;
+    border-radius: 50%;
+    background-color: var(--accent-color);
+    width: 55px;
+    height: 55px;
+    padding: 0px;
+    border: none;
+  }
+
+  .table:hover .table-button {
+    cursor: pointer;
+    background-color: var(--hover-color);
+  }
+
+  .anchors-title {
+    display: block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.21;
+    color: var(--accent-color);
+    background-color: var(--primary-white-color);
+    border: 1px solid #d9dce4;
+    border-radius: 5px;
+    box-shadow: 0px 3px 10px #d9dce4;
+    width: 273px;
+    padding: 19px 70px 17px 68px;
+    margin: 0px 0px 0px auto;
+  }
+
+  .is-open {
+    border-radius: 0px 5px 0px 0px;
+    border-bottom: none;
+    box-shadow: none;
+  }
+
+  .table:hover .anchors-title {
+    cursor: pointer;
+    color: var(--hover-color);
+  }
+
+  .anchors-list {
+    width: 273px;
+    border: 1px solid #d9dce4;
+    border-top: none;
+    border-radius: 0px 0px 5px 5px;
+    padding: 13px 20px 30px;
+    margin-left: auto;
+    margin-right: 0px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.21;
+  }
+
+  .anchors-list li:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .anchors-item:last-child {
+    margin-bottom: 0px;
+  }
+
+  .anchors-link {
+    color: var(--primary-text-color);
+  }
+
+  .anchors-link:visited {
+    color: var(--accent-color);
+  }
+
+  .anchors-link:hover,
+  .anchors-link:focus {
+    color: var(--hover-color);
+  }
+
+  /* footer  */
+  .footer {
+    padding-top: 73px;
+  }
+
+  .footer-copyright {
+    margin-top: 42px;
+  }
+
+  .footer-text {
+    width: 274px;
+    margin-bottom: 0px;
+  }
+
+  .footer-section {
+    margin: 6px 0px 0px 125px;
+  }
+
+  .footer-list > li:first-child {
+    margin-right: 200px;
+  }
+
+  .contact-terms {
+    margin: 0px 0px 0px 192px;
   }
 }
