--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,7 @@ h5 {
   line-height: 1.56;
   letter-spacing: 1px;
   text-transform: uppercase;
+  text-align: center;
   color: var(--primary-white-color);
 }
 
