--- a/styles.css
+++ b/styles.css
@@ -672,11 +672,12 @@ h5 {
     margin-bottom: 20px;
     background-image: linear-gradient(225deg, #4d4d9e 0%, #32325d 100%);
     background-color: #32325d;
+    transition-property: transform;
+    transition-duration: 400ms;
   }
 
   .country-item:focus,
   .country-item:hover {
-    transition-duration: 400ms;
     transform: scale(1.05);
   }
 
